# robotpy-ctre

./: .gitignore  .gittrack  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  develop.md  meson.build  pyproject.toml  setup.py
.github/workflows/: dist.yml  scan.yml
ctre/: __init__.py  _osx_phoenix6_pkgcfg.py  basemotorcontroller.py  btrajectorypoint.py  bufferedtrajectorypointstream.py  canifier.py  cantalon.py  ctre.cpp  led.py  pigeonimu.py  sensorcollection.py  talonsrx.py  trajectorypoint.py  victorspx.py  wpi_talonsrx.py  wpi_victorspx.py
ctre/_api/: __init__.py
ctre/_canutils/: __init__.py
ctre/_cci/: __init__.py
ctre/_core/: __init__.py
ctre/_diagnostics/: __init__.py
ctre/_impl/: __init__.py  canifierfaults.py  canifierstickyfaults.py  cantalon_roborio.cpp  cantalon_sim.py  constants.py  ctre_cpp.cpp  ctre_roborio.cpp  faults.py  faultsbase.py  info.py  motionprofilestatus.py  pigeonfaults.py  pigeonstickyfaults.py  sim_ui.py  stickyfaults.py  trajectorypoint.py
ctre/_platform/: __init__.py
ctre/_wpiapi/: __init__.py
docs/: .gitignore  Makefile  api.rst  api_canifier.rst  api_misc.rst  api_mot.rst  api_pigeonimu.rst  api_support.rst  api_talonsrx.rst  api_victorspx.rst  conf.py  index.rst  requirements.txt  setup.py
examples/CANTalon/: robot.py
examples/CANTalonPID/: robot.py
examples/CANTalonVelocityClosedLoop/: robot.py
examples/basic/: robot.py
examples/broken/CANTalonPID/: robot.py
examples/broken/CANTalonVelocityClosedLoop/: robot.py
examples/broken/CANTalon_MotionMagic/: instrum.py  robot.py
examples/getting-started/: robot.py
examples/motion_magic/: physics.py  robot.py
examples/position_closed_loop/: robot.py
phoenix5/: __init__.py  _init_phoenix6.py  _osx_phoenix6_pkgcfg.py  ctre.cpp  sensors.py
semiwrap/: AbsoluteSensorRange.yml  Animation.yml  BaseMotorController.yml  BasePigeonSimCollection.yml  BaseStandardAnimation.yml  CANCoderSimCollection.yml  CANCoderStickyFaults.yml  CANdleFaults.yml  CANdleStatusFrame.yml  CANifierControlFrame.yml  CANifierStatusFrame.yml  CANifierStickyFaults.yml  CANifierVelocityMeasPeriod.yml  Faults.yml  GadgeteerUartClient.yml  ILoopable.yml  IMotorController.yml  IOutputSignal.yml  MagnetFieldStrength.yml  PigeonIMU_Faults.yml  PigeonIMU_StatusFrame.yml  PigeonIMU_StickyFaults.yml  RainbowAnimation.yml  RemoteSensorSource.yml  RgbFadeAnimation.yml  SensorTerm.yml  SetValueMotionProfile.yml  TalonSRX.yml  VBatOutputMode.yml  VelocityMeasPeriod.yml  VictorSPX.yml  VictorSPXSimCollection.yml  WPI_BaseMotorController.yml  WPI_VictorSPX.yml  paramEnum.yml
tests/: conftest.py  run_tests.py  run_tests.sh  test_canifier.py  test_cantalon.py  test_ctre.py  test_enum.py  test_pigeonimu.py  test_sensorcollection.py  test_sensors.py  test_talonsrx.py  test_victorspx.py
tools/: build.sh  download.sh
wrapcfg/: BaseMotorController.yml  BasePigeon.yml  BaseTalon.yml  BaseTwoSizeAnimation.yml  BufferedTrajectoryPointStream.yml  CANBusAddressable.yml  CANCoder.yml  CANCoderFaults.yml  CANdle.yml  CANdleConfiguration.yml  CANifier.yml  CANifierFaults.yml  ColorFlowAnimation.yml  ControlFrame.yml  ControlMode.yml  CustomParamConfiguration.yml  DemandType.yml  ErrorCode.yml  FeedbackDevice.yml  FireAnimation.yml  FollowerType.yml  IFollower.yml  IInvertable.yml  IMotorControllerEnhanced.yml  IProcessable.yml  InvertType.yml  LarsonAnimation.yml  LimitSwitchType.yml  MotionProfileStatus.yml  MovingAverage.yml  NeutralMode.yml  PigeonIMU.yml  SensorCollection.yml  SensorInitializationStrategy.yml  SensorTimeBase.yml  SensorVelocityMeasPeriod.yml  SingleFadeAnimation.yml  StatusFrame.yml  StickyFaults.yml  StrobeAnimation.yml  (+9 more)
